// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactions opens custom color picker drop down when clicked 1`] = `
<div>
  <div
    class="clay-color-picker"
  >
    <input
      name="colorPicker2"
      style="display: none;"
      type="text"
      value="008000"
    />
    <label>
      Custom Colors
    </label>
    <div
      class="input-group clay-color"
      style=""
    >
      <div
        class="input-group-item input-group-item-shrink input-group-prepend"
      >
        <div
          class="input-group-text"
        >
          <button
            aria-label="Select a color"
            class="btn clay-color-btn dropdown-toggle"
            style="border-width: 0px; background: rgb(0, 128, 0); height: 28px; width: 28px;"
            title="008000"
            type="button"
          />
        </div>
      </div>
      <div
        class="input-group-item input-group-append"
      >
        <input
          aria-label="Color selection is 008000"
          class="form-control input-group-inset input-group-inset-before"
          type="text"
          value="008000"
        />
        <label
          class="input-group-inset-item input-group-inset-item-before"
        >
          #
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Interactions opens custom color picker drop down when clicked 2`] = `null`;

exports[`Rendering default 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker1"
        style="display: none;"
        type="text"
        value="FFF"
      />
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              style="border: 1px solid #e7e7ed; background: rgb(255, 255, 255); height: 28px; width: 28px;"
              title="FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu clay-color-dropdown-menu"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(0, 0, 0); height: 24px; width: 24px;"
              title="000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(95, 95, 95); height: 24px; width: 24px;"
              title="5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(154, 154, 154); height: 24px; width: 24px;"
              title="9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(203, 203, 203); height: 24px; width: 24px;"
              title="CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(225, 225, 225); height: 24px; width: 24px;"
              title="E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border: 1px solid #e7e7ed; background: rgb(255, 255, 255); height: 24px; width: 24px;"
              title="FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 13, 13); height: 24px; width: 24px;"
              title="FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 138, 28); height: 24px; width: 24px;"
              title="FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(43, 166, 118); height: 24px; width: 24px;"
              title="2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(0, 110, 248); height: 24px; width: 24px;"
              title="006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(127, 38, 255); height: 24px; width: 24px;"
              title="7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 33, 160); height: 24px; width: 24px;"
              title="FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 95, 95); height: 24px; width: 24px;"
              title="FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 180, 110); height: 24px; width: 24px;"
              title="FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(80, 210, 160); height: 24px; width: 24px;"
              title="50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(75, 155, 255); height: 24px; width: 24px;"
              title="4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(175, 120, 255); height: 24px; width: 24px;"
              title="AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 115, 195); height: 24px; width: 24px;"
              title="FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 177, 177); height: 24px; width: 24px;"
              title="FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 222, 192); height: 24px; width: 24px;"
              title="FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(145, 227, 195); height: 24px; width: 24px;"
              title="91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(157, 200, 255); height: 24px; width: 24px;"
              title="9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(223, 202, 255); height: 24px; width: 24px;"
              title="DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 197, 230); height: 24px; width: 24px;"
              title="FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 217, 217); height: 24px; width: 24px;"
              title="FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border: 1px solid #e7e7ed; background: rgb(255, 243, 232); height: 24px; width: 24px;"
              title="FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(177, 235, 213); height: 24px; width: 24px;"
              title="B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(197, 223, 255); height: 24px; width: 24px;"
              title="C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border: 1px solid #e7e7ed; background: rgb(248, 242, 255); height: 24px; width: 24px;"
              title="F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 237, 247); height: 24px; width: 24px;"
              title="FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Rendering disabled state 1`] = `
<body>
  <div>
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker1"
        style="display: none;"
        type="text"
        value="FFF"
      />
      <label>
        Default
      </label>
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              disabled=""
              style="border: 1px solid #e7e7ed; background: rgb(255, 255, 255); height: 28px; width: 28px;"
              title="FFF"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is FFF"
            class="form-control input-group-inset input-group-inset-before"
            disabled=""
            type="text"
            value="FFF"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu clay-color-dropdown-menu"
      >
        <div
          class="clay-color-header"
        >
          <span
            class="component-title"
          >
            Default Colors
          </span>
        </div>
        <div
          class="clay-color-swatch"
        >
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(0, 0, 0); height: 24px; width: 24px;"
              title="000000"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(95, 95, 95); height: 24px; width: 24px;"
              title="5F5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(154, 154, 154); height: 24px; width: 24px;"
              title="9A9A9A"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(203, 203, 203); height: 24px; width: 24px;"
              title="CBCBCB"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(225, 225, 225); height: 24px; width: 24px;"
              title="E1E1E1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border: 1px solid #e7e7ed; background: rgb(255, 255, 255); height: 24px; width: 24px;"
              title="FFFFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 13, 13); height: 24px; width: 24px;"
              title="FF0D0D"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 138, 28); height: 24px; width: 24px;"
              title="FF8A1C"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(43, 166, 118); height: 24px; width: 24px;"
              title="2BA676"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(0, 110, 248); height: 24px; width: 24px;"
              title="006EF8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(127, 38, 255); height: 24px; width: 24px;"
              title="7F26FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 33, 160); height: 24px; width: 24px;"
              title="FF21A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 95, 95); height: 24px; width: 24px;"
              title="FF5F5F"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 180, 110); height: 24px; width: 24px;"
              title="FFB46E"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(80, 210, 160); height: 24px; width: 24px;"
              title="50D2A0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(75, 155, 255); height: 24px; width: 24px;"
              title="4B9BFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(175, 120, 255); height: 24px; width: 24px;"
              title="AF78FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 115, 195); height: 24px; width: 24px;"
              title="FF73C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 177, 177); height: 24px; width: 24px;"
              title="FFB1B1"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 222, 192); height: 24px; width: 24px;"
              title="FFDEC0"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(145, 227, 195); height: 24px; width: 24px;"
              title="91E3C3"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(157, 200, 255); height: 24px; width: 24px;"
              title="9DC8FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(223, 202, 255); height: 24px; width: 24px;"
              title="DFCAFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 197, 230); height: 24px; width: 24px;"
              title="FFC5E6"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 217, 217); height: 24px; width: 24px;"
              title="FFD9D9"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border: 1px solid #e7e7ed; background: rgb(255, 243, 232); height: 24px; width: 24px;"
              title="FFF3E8"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(177, 235, 213); height: 24px; width: 24px;"
              title="B1EBD5"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(197, 223, 255); height: 24px; width: 24px;"
              title="C5DFFF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border: 1px solid #e7e7ed; background: rgb(248, 242, 255); height: 24px; width: 24px;"
              title="F8F2FF"
              type="button"
            />
          </div>
          <div
            class="clay-color-swatch-item"
          >
            <button
              class="btn clay-color-btn "
              style="border-width: 0px; background: rgb(255, 237, 247); height: 24px; width: 24px;"
              title="FFEDF7"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
